loading screen tips, /poll

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1166,6 +1166,22 @@
   "RemainingText.Suffix": " left",
   "RemainingText.EjectionSuffix.NKSingle": "remains.",
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
+  "GSInfo.ImpCount": "Impostors: {0}",
+  "GSInfo.MadmateCount": "Madmates: {0}",
+  "GSInfo.ConvertedCount": "Converted Players (excluding Madmates): {0}",
+  "GSInfo.NNKCount": "Non-Killing Neutrals: {0}",
+  "GSInfo.NKCount": "Neutral Killers: {0}",
+  "GSInfo.CrewCount": "Crewmates: {0}",
+  "GSInfo.RomanticState": "{0}",
+  "GSInfo.LoversState": "Number of Lovers Alive: {0}",
+  "GSInfo.Tasks": "Completed Tasks: {0}",
+  "GSRomanticState.0": "Romantic doesn't exist",
+  "GSRomanticState.1": "Romantic exists but hasn't picked a partner",
+  "GSRomanticState.2": "Romantic exists and has picked a partner",
+  "GSRomanticState.3": "Romantic exists, is alive, but hasn't picked a partner",
+  "GSRomanticState.6": "Romantic exists, has picked a partner who is dead, but Romantic is alive",
+  "GSRomanticState.8": "Romantic exists, has picked a partner who is alive, but Romantic is dead",
+  "GSRomanticState.24": "Romantic exists, has picked a partner who is alive, and Romantic is alive",
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
   "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
@@ -1581,7 +1597,7 @@
   "WraithDuration": "Vanish Duration",
   "WraithVentNormallyOnCooldown": "<color=#4b0082>Wraith</color> vents normally when invis is on cooldown",
   "LowLoadMode": "Fix Lag",
-  "DeepLowLoad": "Deep Low Load (Do Not Use)",
+  "DeepLowLoad": "Prioritize Performance",
   "HackCooldown": "Hack Cooldown",
   "HackDuration": "Hack Duration",
   "MimicCooldown": "Mimic Cooldown",
@@ -2150,6 +2166,14 @@
   "CommandDescription.CSD": "Plays a custom sound",
   "CommandDescription.SD": "Plays a sound from the game",
   "CommandDescription.GNO": "Guess The Number mini-game",
+  "CommandDescription.Guess": "Guess a player's role",
+  "CommandDescription.Trial": "Trial a player as the Judge or Councillor",
+  "CommandDescription.Swap": "Set a (vote-) swap target as the Swapper",
+  "CommandDescription.Compare": "Compare two players' teams as the Inspector",
+  "CommandDescription.Medium": "Answer the Medium's question",
+  "CommandDescription.Revenge": "Take revenge on (kill) a player as the Nemesis",
+  "CommandDescription.Poll": "Starts a poll. (The question should end with a question mark.)",
+  "CommandDescription.PV": "Vote in a poll",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2185,6 +2209,78 @@
   "CommandArgs.Colour.Color": "The color to set (ex. red, blue, yellow)",
   "CommandArgs.SD.Sound": "The sound to play",
   "CommandArgs.GNO.Number": "The number to guess",
+  "CommandArgs.Guess.Id": "The player's ID to guess",
+  "CommandArgs.Guess.Role": "The role or add-on to guess",
+  "CommandArgs.Trial.Id": "The player's ID to trial or kill",
+  "CommandArgs.Swap.Id": "The player's ID whose vote will be swapped with the other player you set",
+  "CommandArgs.Compare.Id1": "The first player's ID to compare",
+  "CommandArgs.Compare.Id2": "The second player's ID to compare",
+  "CommandArgs.Medium.Answer": "yes/no",
+  "CommandArgs.Revenge.Id": "The player's ID to take revenge on (kill)",
+  "CommandArgs.Poll.Question": "The question to ask",
+  "CommandArgs.Poll.AnswerA": "The first answer",
+  "CommandArgs.Poll.AnswerB": "The second answer",
+  "CommandArgs.Poll.AnswerC": "The third answer (leave blank if not needed)",
+  "CommandArgs.Poll.AnswerD": "The fourth answer (leave blank if not needed)",
+  "CommandArgs.PV.Vote": "A/B/C/D",
+  "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
+  "PollResultTitle": "Poll Results",
+  "Poll.Winner": "Winner: <b>{0}. {1}</b> with {2} votes\\n",
+  "Poll.Tie": "Tie: {0} each with {1} votes\\n",
+  "Poll.Begin": "You may vote using /pv {answer} (A/B/C/D)",
+  "Poll.TimeInfo": "The results will be final in 60 seconds.",
+  "Poll.Inactive": "There isn't any active poll currently.",
+  "Poll.AlreadyVoted": "You already cast your vote, so it won't be counted.",
+  "Poll.VotingInfo": "Use /pv {answer} to vote, answer can be a character or a number.",
+  "Poll.YouVoted": "You have voted for {0}, which has now {1} votes.",
+  "PollUsage": "Format:\\n<size=80%><b>/poll {Question}? <size=55%>{Answer A} {Answer B} \n[Answer C] [Answer D] [Answer E]</size></b></size>\n\n<size=50%>Note: The question should always end with a question mark (?)!</size>",
+  "ThankYouForUsingEHR": "Thank you for using EHR!",
+  "LoadingHint.0": "Did you know?\nYou can put roles of your choice into custom teams!\nView instructions on our website (link on main menu)!",
+  "LoadingHint.1": "Did you know?\nYou can force or ban certain role and add-on combos using /combo in lobby!\nGive it a try after this game!",
+  "LoadingHint.2": "Did you know?\nYou can change roles', add-ons', settings', etc. names using custom translation files!",
+  "LoadingHint.3": "Did you know?\nYou can play our beta releases / test versions!\nJoin our Discord server to download them (link on main menu)!",
+  "LoadingHint.4": "Found a bug?\nReport it to our Discord server (link on main menu)!\nWe'll fix it as soon as possible!",
+  "LoadingHint.5": "Have an idea you would like to see in the mod?\nPost your suggestion in our Discord server (link on main menu)!\nWe'll consider it for future updates!",
+  "LoadingHint.6": "Did you know?\nYou can activate the ban-list to permanently ban players using their friend code!",
+  "LoadingHint.7": "Did you know?\nYou can add or remove moderators directly in the game by using /addmod and /deletemod!",
+  "LoadingHint.8": "Did you know?\nHackers usually don't have a friend code, so you can easily enable the protect in System Settings!",
+  "LoadingHint.9": "Did you know?\nYou can quickly change game settings without opening the menu using /changesetting (/cs)!\nExample: /cs map polus",
+  "LoadingHint.10": "Did you know?\nYou can customize your lobby tag using custom translation files!",
+  "LoadingHint.11": "You can get access to the /setrole (formerly /up) command by just hosting EHR lobbies weekly?\nIf you're eligible, DM your friend code to the developer and that's it!",
+  "LoadingHint.12": "Confused about your death? Don't know who killed you?\nUse /death or /d after you die!",
+  "LoadingHint.13": "Role text covering up names in meetings?\nUse /xf!",
+  "LoadingHint.14": "Bored of waiting in lobby or after dying early?\nUse /gno to play a simple Guess The Number minigame to speed up time!",
+  "LoadingHint.15": "Black screened after a meeting?\nTry pressing CTRL + SHIFT + X to fix it!",
+  "LoadingHint.16": "Don't know what your role does?\nPress F1 instead of typing commands!",
+  "LoadingHint.17": "Unsure about your add-ons?\nPress F2 instead of using commands!",
+  "LoadingHint.18": "Edited the translation file but don't want to restart the game just to apply the changes?\nPress F5 + T!",
+  "LoadingHint.19": "Chat icon not appearing?\nPress SHIFT + C + ENTER to fix it!",
+  "LoadingHint.20": "Did you know?\nYou can instantly start the game without waiting for the 5 seconds countdown by pressing SHIFT!",
+  "LoadingHint.21": "Did you know?\nYou can cancel the starting countdown using the Cancel button or by pressing C!",
+  "LoadingHint.22": "Did you know?\nYou can reset all settings to their default values by pressing CTRL + SHIFT + DELETE!",
+  "LoadingHint.23": "Did you know?\nYou can make yourself suicide by pressing SHIFT + E + ENTER!",
+  "LoadingHint.24": "Did you know?\nNot even the most experienced EHR hosts know all of these facts about the mod they're getting told in these tips!",
+  "LoadingHint.25": "Meeting not ending when everyone voted?\nPress F6 to end the meeting while also counting the votes!",
+  "LoadingHint.26": "Do you have a friend who thinks they understand everything, and you want to prove them wrong?\nTurn on the Chemist role and see their reaction!",
+  "LoadingHint.27": "The Dev's favorite roles are:\nEcho, Penguin, Rift Maker, Bubble, Evolver, Rogue, Vengeance....\nand basically all crewmate roles :D",
+  "LoadingHint.28": "Did you know?\nEHR has 7 different game modes! Try them out!\nSwitch game modes using the first setting on the Game Settings tab!",
+  "LoadingHint.29": "Did you know?\nEHR has a unique game mode for expert gamers called Stop And Go!\nGive it a try after this game!",
+  "LoadingHint.30": "Getting Crewmate over and over again? Didn't get to kill for the last half an hour?\nUnleash your bloodthirst in our Free For All game mode!",
+  "LoadingHint.31": "Did you know?\nEHR has a custom Hide And Seek game mode with 12 special roles dedicated for this playstyle!",
+  "LoadingHint.32": "Are you a master in Bomb Tag and Hot Potato?\nShow it to your friends and test your skills in our Hot Potato game mode!",
+  "LoadingHint.33": "Are you the fastest tasker and killer in the lobby?\nThen we have a special game mode made for you! Try the Speedrun game mode after this game!",
+  "LoadingHint.34": "Do you like the Demon role and its mechanics?\nWhat if we told you, that there's a game mode where everyone is a Demon, called Solo PVP?\nGive it a try after this game!",
+  "LoadingHint.35": "Did you know?\nCTRL + F1 allows you to dump the game's logs at anytime!",
+  "LoadingHint.36": "Did you know?\nYou can use pets to trigger abilites!\nJust turn on the setting in Game Modifiers!",
+  "LoadingHint.37": "Did you know?\nYou can make everyone be able to vent!\nJust turn on the setting in Game Modifiers!",
+  "LoadingHint.38": "Did you know?\nYou can disable specific tasks in Game Modifiers!",
+  "LoadingHint.39": "Did you know?\nYou can change the zipline travel duration on The Fungle in Game Settings!",
+  "LoadingHint.40": "Did you know?\nI bet you didn't",
+  "LoadingHint.41": "Did you know?\n'at least' is 2 words, not 1",
+  "LoadingHint.42": "Did you know?\nI didn't",
+  "LoadingHint.43": "Did you know that you can't know everything?",
+  "LoadingHint.44": "Did you know?\nThe Dev's favorite number is 44",
+  "LoadingHint.45": "Did you know that you can use the yield statement in an iterator to provide the next value or signal the end of an iteration in a loop since async doesn't work in BepInEx?\nYeah, me neither",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
   "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
