--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2263,7 +2263,7 @@
   "LoadingHint.25": "Meeting not ending when everyone voted?\nPress F6 to end the meeting while also counting the votes!",
   "LoadingHint.26": "Do you have a friend who thinks they understand everything, and you want to prove them wrong?\nTurn on the Chemist role and see their reaction!",
   "LoadingHint.27": "The Dev's favorite roles are:\nEcho, Penguin, Rift Maker, Bubble, Evolver, Rogue, Vengeance....\nand basically all crewmate roles :D",
-  "LoadingHint.28": "Did you know?\nEHR has 7 different game modes! Try them out!\nSwitch game modes using the first setting on the Game Settings tab!",
+  "LoadingHint.28": "Did you know?\nEHR has 7 different game modes! Try them out!\nSwitch game modes using the first setting on the Mod Settings tab!",
   "LoadingHint.29": "Did you know?\nEHR has a unique game mode for expert gamers called Stop And Go!\nGive it a try after this game!",
   "LoadingHint.30": "Getting Crewmate over and over again? Didn't get to kill for the last half an hour?\nUnleash your bloodthirst in our Free For All game mode!",
   "LoadingHint.31": "Did you know?\nEHR has a custom Hide And Seek game mode with 12 special roles dedicated for this playstyle!",
@@ -2274,7 +2274,7 @@
   "LoadingHint.36": "Did you know?\nYou can use pets to trigger abilites!\nJust turn on the setting in Game Modifiers!",
   "LoadingHint.37": "Did you know?\nYou can make everyone be able to vent!\nJust turn on the setting in Game Modifiers!",
   "LoadingHint.38": "Did you know?\nYou can disable specific tasks in Game Modifiers!",
-  "LoadingHint.39": "Did you know?\nYou can change the zipline travel duration on The Fungle in Game Settings!",
+  "LoadingHint.39": "Did you know?\nYou can change the zipline travel duration on The Fungle in Mod Settings!",
   "LoadingHint.40": "Did you know?\nI bet you didn't",
   "LoadingHint.41": "Did you know?\n'at least' is 2 words, not 1",
   "LoadingHint.42": "Did you know?\nI didn't",
