Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1017,7 +1017,17 @@
   "AutoPlayAgainCountdown": "Delay before Auto Re-Entering Lobby",
   "RemovePetsAtDeadPlayers": "Remove pets from dead players",
   "SeeEjectedRolesInMeeting": "See ejected roles in meetings",
-  "EnableKillerLeftCommand": "Enable use of /kcount command",
+  "EnableKillerLeftCommand": "Enable use of /gs (formerly /kcount) command",
+  "GameStateCommand.ShowImpCount": "Show amount of alive <#ff1919>Impostors</color>",
+  "GameStateCommand.ShowMadmateCount": "Show amount of alive <#ff1919>Madmates</color>",
+  "GameStateCommand.ShowConvertedCount": "Show amount of alive <#ffab1b>Converted</color> Players (excluding <#ff1919>Madmates</color>)",
+  "GameStateCommand.ShowNNKCount": "Show amount of alive <#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color>",
+  "GameStateCommand.ShowNKCount": "Show amount of alive <#ffab1b>Neutral</color> <#ff1919>Killers</color>",
+  "GameStateCommand.ShowCrewCount": "Show amount of alive <#8cffff>Crewmates</color>",
+  "GameStateCommand.ShowRomanticState": "Show <#ff1493>Romantic</color> pair state",
+  "GameStateCommand.ShowLoversState": "Show <#ff9ace>Lovers</color> pair state",
+  "GameStateCommand.ShowTasks": "Show amount of completed tasks",
+  "MinPlayersForGameStateCommand": "Minimum alive players to use this command",
   "DoorsResetMode": "Mode",
   "AllClosed": "Close All",
   "AllOpen": "Open All",
@@ -3336,6 +3346,8 @@
   "LobbyCloseTimer": "Lobby Closing Timer: {0}",
   "HorseMode": "Horse Mode",
   "LongMode": "Long Mode",
+  "ShowPlayerInfoInLobby": "Show Player Info in Lobby",
+  "PetsForceEnabled": "The Speedrun game mode requires pets to be enabled, so they are forced on. You can disable it for future games under Game Modifiers.",
   "CustomTeamHelp": "You are in the {0}! ({1})\\nWork with your team members to win together!",
   "NoPetActionMsg1": "You just ate a cookie",
   "NoPetActionMsg2": "You look around",
@@ -4514,6 +4526,7 @@
   "WinnerRoleText.Spiritcaller": "Spiritcaller Wins!",
   "WinnerRoleText.Glitch": "The Glitch Wins!",
   "WinnerRoleText.PlagueBearer": "Plaguebearer Wins!",
+  "WinnerRoleText.Pestilence": "Pestilence Wins!",
   "WinnerRoleText.Doomsayer": "Doomsayer Wins!",
   "WinnerRoleText.Werewolf": "Werewolf Wins!",
   "WinnerRoleText.HeadHunter": "Head Hunter Wins!",
