Add Messenger (add-on) & Adrenaline (crewmate)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -886,8 +886,8 @@
   "DisableCleanO2Filter": "Disable Clean O2 Filter Task",
   "DisableUnlockManifolds": "Disable Unlock Manifolds Task",
   "DisablePrimeShields": "Disable Prime Shields Task",
-  "DisableMeasureWeather": "",
-  "DisableBuyBeverage": "",
+  "DisableMeasureWeather": "Disable Measure Weather Task",
+  "DisableBuyBeverage": "Disable Buy Beverage Task",
   "DisableAssembleArtifact": "Disable Assemble Artifact Task",
   "DisableSortSamples": "Disable Sort Samples Task",
   "DisableProcessData": "Disable Process Data Task",
@@ -1540,6 +1540,15 @@
   "EnergeticInfo": "Your Ability Cooldown is Lower",
   "EnergeticInfoLong": "(Add-ons):\\nAs the Energetic, the cooldown of your ability is reduced by 25%.",
   "Prefix.Energetic": "Energetic",
+  "Messenger": "Messenger",
+  "MessengerInfo": "Send a Message to Dead Players",
+  "MessengerInfoLong": "(Add-ons):\\nAs the Messenger, after you die, you can send a message in a meeting to the alive players by typing <b>/hm {number}</b>, replacing {number} with the corresponding index of the messages listed below:\\n\\n<size=70%><b>1.</b> The player that killed me was last in <room>\\n   Example: The player that killed me was last in Cafeteria\\n\\n<b>2.</b> The killer's role is <role>\\n   Example: The killer's role is Ninja\\n\\n<b>3.</b> I was a(n) <Crewmate/Impostor/Neutral>\\n   Example: I was a Crewmate</size>\\n\\nExample use: <b>/hm 1</b> - This will send the first message to the alive players.",
+  "Prefix.Messenger": "Messenger",
+  "MessengerMessage.1": "The player that killed me was last in {0}",
+  "MessengerMessage.2": "The killer's role is {0}",
+  "MessengerMessage.3": "I was a(n) {0}",
+  "MessengerTitle": "<#ff0000>Message from {0}</color>",
+  "DisableLobbyMusic": "Disable Lobby Music",
   "Evolver": "Evolver",
   "EvolverInfo": "Select an Upgrade After Each Meeting",
   "EvolverInfoLong": "(Neutrals):\\nAs the Evolver, you can choose an upgrade after each meeting. Pet to cycle between the available upgrades. The same upgrade can appear multiple times. Once the timer to pick ends, your upgrade will be applied.\\n\\n<size=70%><b><u>Upgrades:</u></b>\\n- Decrease Kill Cooldown (by 2.5s)\\n- Gain Impostor Vision (unaffected by lights sabotage)\\n- Increase Vision (by 0.4x)\\n- Increase Speed (by 0.25x)\\n- Increase Kill Distance (Short → Medium → Long)\\n- Gain Venting Ability (and 1 use)\\n- Increase Venting Use Limit (by 3)\\n- Gain Sabotage Ability (and 1 use)\\n- Increase Sabotage Use Limit (by 2)\\n- Gain Shield (cannot be killed in the current round)</size>\\n\\n<u><b>Remarks:</b></u>\\nIf you can vent, the number of vent uses you have is displayed next to your role name like this: <b>(V: 1)</b> - Same with the sabotage use limit: <b>(S: 2)</b>",
@@ -1712,6 +1721,8 @@
   "AFKWarning": "<#ffff00><size=90%>Please move to avoid being marked as AFK</color> <#ffffff>({0})</size></color>",
   "AFKSuffix": "<#ffa500>(AFK)</color>",
   "AFKConsequence": "Consequence for AFK players",
+  "AFKMinPlayersToActivate": "Minimum alive players to activate AFK Detector",
+  "AFKActivateOnStart": "Activate AFK Detector on game start",
   "AFKConsequence.Nothing": "Nothing",
   "AFKConsequence.Shield": "Shield",
   "AFKConsequence.Suicide": "Suicide",
@@ -2428,7 +2439,7 @@
   "RoleRateNoColor": "Random",
   "RoleOnNoColor": "Always",
   "RoleOffNoColor": "Disabled",
-  "Rate0": "<#440000>0%</color>",
+  "Rate0": "<#662222>0%</color>",
   "Rate5": "<#00ffff>5%</color>",
   "Rate10": "<#00fffb>10%</color>",
   "Rate15": "<#00fff8>15%</color>",
@@ -2893,6 +2904,15 @@
   "Transmitter": "Transmitter",
   "TransmitterInfo": "TP to nearest player by doing a task",
   "TransmitterInfoLong": "(Crewmates):\\nAs the Transmitter, when you complete a task, you teleport to the nearest player.",
+  "Adrenaline": "Adrenaline",
+  "AdrenalineInfo": "Be Fast Enough to Avoid Kills",
+  "AdrenalineInfoLong": "(Crewmates):\\nAs the Adrenaline, when you get attacked, the killing attempt gets blocked and you receive a timer. If a meeting gets called before the timer ends, you survive. Otherwise, you die when the timer ends.\\n\\nDepending on the settings, you may or may not know be able to call emergency meetings during the timer.",
+  "Adrenaline.Time": "Time for a Meeting to Start",
+  "Adrenaline.MaxSurvives": "Maximum Survives",
+  "Adrenaline.MinTasksRequired": "Minimum Tasks Required to Survive an Attack",
+  "Adrenaline.CanCallMeetingDuringTimer": "Can Call Emergency Meetings During the Timer",
+  "Adrenaline.SpeedDuringTimer": "Speed During the Timer",
+  "Adrenaline.Suffix": "<size=80%><#ffff00>You were attacked!\\nIf a meeting doesn't start before <#ffffff>{0}s</color>, you die!</color></size>",
   "Sentry": "Sentry",
   "SentryInfo": "Monitor a Room",
   "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)</size>\\nYou also get a notification when someone uses a vent or shapeshifts in that room.\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
@@ -3347,6 +3367,7 @@
   "HorseMode": "Horse Mode",
   "LongMode": "Long Mode",
   "ShowPlayerInfoInLobby": "Show Player Info in Lobby",
+  "LobbyMusic": "Lobby Music",
   "PetsForceEnabled": "The Speedrun game mode requires pets to be enabled, so they are forced on. You can disable it for future games under Game Modifiers.",
   "CustomTeamHelp": "You are in the {0}! ({1})\\nWork with your team members to win together!",
   "NoPetActionMsg1": "You just ate a cookie",
