--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1315,7 +1315,6 @@
   "SheriffCanKillSidekick": "Can Kill <color=#00b4eb>Sidekicks</color>",
   "SheriffCanKillLovers": "Can Kill <color=#ff9ace>Lovers</color>",
   "SheriffCanKillMadmate": "Can Kill <color=#ff1919>Madmates</color>",
-  "SheriffCanKillInfected": "Can Kill <color=#7B8968>Infected</color> players",
   "SheriffCanKillContagious": "Can Kill <color=#2E8B57>Contagious</color> players",
   "SheriffSetMadCanKill": "Non-<color=#8cffff>Crew</color> <color=#f8cd46>Sheriff</color> Configuration",
   "SheriffMadCanKillImp": "Can kill <color=#ff1919>Impostors</color>",
@@ -2195,6 +2194,7 @@
   "CommandDescription.Revenge": "Take revenge on (kill) a player as the Nemesis",
   "CommandDescription.Poll": "Starts a poll. (The question should end with a question mark.)",
   "CommandDescription.PV": "Vote in a poll",
+  "CommandDescription.HM": "Send one of the messages as the Messenger",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2244,6 +2244,7 @@
   "CommandArgs.Poll.AnswerC": "The third answer (leave blank if not needed)",
   "CommandArgs.Poll.AnswerD": "The fourth answer (leave blank if not needed)",
   "CommandArgs.PV.Vote": "A/B/C/D",
+  "CommandArgs.HM.Id": "1/2/3",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Winner": "Winner: <b>{0}. {1}</b> with {2} votes\\n",
@@ -2883,7 +2884,6 @@
   "FFFCanKillLovers": "Can Kill Lovers",
   "FFFCanKillSidekick": "Can Kill Sidekicks",
   "FFFCanKillEgoist": "Can Kill Egoist",
-  "FFFCanKillInfected": "Can Kill Infected Players",
   "FFFCanKillContagious": "Can Kill Contagious Players",
   "FFFCanKillUndead": "Can Kill Undead Players",
   "Mafioso": "Mafioso",
@@ -4012,7 +4012,7 @@
   "SafeguardSuffix": "<#00ffa5>You're shielded</color>",
   "Telekinetic": "Telekinetic",
   "TelekineticInfo": "Execute Different Actions to Help the Crew",
-  "TelekineticInfoLong": "(Crewmates):\\nSees a timer at all times. Dies if it gets above 60s. At first, petting does nothing. They can vent to change modes. They can only have one mode activated at a time. To execute an action, pet your pet. Frozen for 5s after using some powers, timer is 40s after a meeting. Each action increases the timer by a certain amount when used (indicated next to the action name in the following list in brackets)<size=80%>\\n\\n<u><b>Modes:</b></u>\\n<i>Teleport Target:</i> teleports the nearest player outside the map (+40s)\\n<i>Teleport Self:</i> teleports themself outside the map (+30s)\\n<i>Freeze:</i> freezes the nearest player (+35s)\\n<i>Kill:</i> instantly kills the nearest player (+60s)\\n<i>Shield:</i> gives them a shield lasting for some time (+45s)\\n<i>Speed:</i> gives them increased speed for some time (+30s)\\n<i>Doors:</i> opens all closed doors instantly (+35s)</size>",
+  "TelekineticInfoLong": "(Crewmates):\\nSees a timer at all times. Dies if it gets above 60s. They can vent to change modes. They can only have one mode activated at a time. To execute an action, pet your pet. Frozen for 5s after using some powers, timer is 40s after a meeting. Each action increases the timer by a certain amount when used (indicated next to the action name in the following list in brackets)<size=80%>\\n\\n<u><b>Modes:</b></u>\\n<i>Teleport Target:</i> teleports the nearest player outside the map (+40s)\\n<i>Teleport Self:</i> teleports themself outside the map (+30s)\\n<i>Freeze:</i> freezes the nearest player (+35s)\\n<i>Kill:</i> instantly kills the nearest player (+60s)\\n<i>Shield:</i> gives them a shield lasting for some time (+45s)\\n<i>Speed:</i> gives them increased speed for some time (+30s)\\n<i>Doors:</i> opens all closed doors instantly (+35s)</size>",
   "Telekinetic.FreezeDuration": "Freeze Duration",
   "Telekinetic.ShieldDuration": "Shield Duration",
   "Telekinetic.SpeedDuration": "Speed Duration",
@@ -4426,7 +4426,7 @@
   "VultureReportCooldown": "Eat Cooldown",
   "VultureMaxEatenInOneRound": "Maximum eaten bodies possible per round",
   "VultureCooldownUp": "Eat Cooldown finished",
-  "VultureChangeRoleWhenCantWin": "Change role when can't win",
+  "VultureChangeRoleWhenCantWin": "Change role when winning is impossible",
   "VultureChangeRole": "Role to change to",
   "ImpCanBeRole": "<color=#ff1919>Impostors</color> can become {role}",
   "CrewCanBeRole": "<color=#8cffff>Crewmates</color> can become {role}",
