--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1176,22 +1176,22 @@
   "RemainingText.Suffix": " left",
   "RemainingText.EjectionSuffix.NKSingle": "remains.",
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
-  "GSInfo.ImpCount": "Impostors: {0}",
-  "GSInfo.MadmateCount": "Madmates: {0}",
-  "GSInfo.ConvertedCount": "Converted Players (excluding Madmates): {0}",
-  "GSInfo.NNKCount": "Non-Killing Neutrals: {0}",
-  "GSInfo.NKCount": "Neutral Killers: {0}",
-  "GSInfo.CrewCount": "Crewmates: {0}",
+  "GSInfo.ImpCount": "<#ff1919>Impostors:</color> {0}",
+  "GSInfo.MadmateCount": "<#ff1919>Madmates:</color> {0}",
+  "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> (excluding <#ff1919>Madmates</color>): {0}",
+  "GSInfo.NNKCount": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals:</color> {0}",
+  "GSInfo.NKCount": "<#ffab1b>Neutral</color> <#ff1919>Killers:</color> {0}",
+  "GSInfo.CrewCount": "<#8cffff>Crewmates:</color> {0}",
   "GSInfo.RomanticState": "{0}",
-  "GSInfo.LoversState": "Number of Lovers Alive: {0}",
-  "GSInfo.Tasks": "Completed Tasks: {0}",
-  "GSRomanticState.0": "Romantic doesn't exist",
-  "GSRomanticState.1": "Romantic exists but hasn't picked a partner",
-  "GSRomanticState.2": "Romantic exists and has picked a partner",
-  "GSRomanticState.3": "Romantic exists, is alive, but hasn't picked a partner",
-  "GSRomanticState.6": "Romantic exists, has picked a partner who is dead, but Romantic is alive",
-  "GSRomanticState.8": "Romantic exists, has picked a partner who is alive, but Romantic is dead",
-  "GSRomanticState.24": "Romantic exists, has picked a partner who is alive, and Romantic is alive",
+  "GSInfo.LoversState": "Number of <#ff9ace>Lovers</color> Alive: {0}",
+  "GSInfo.Tasks": "<#00ffa5>Completed Tasks:</color> {0}",
+  "GSRomanticState.0": "<#ff1493>Romantic</color> doesn't exist",
+  "GSRomanticState.1": "<#ff1493>Romantic</color> exists but hasn't picked a partner",
+  "GSRomanticState.2": "<#ff1493>Romantic</color> exists and has picked a partner",
+  "GSRomanticState.3": "<#ff1493>Romantic</color> exists, is alive, but hasn't picked a partner",
+  "GSRomanticState.6": "<#ff1493>Romantic</color> exists, has picked a partner who is dead, but Romantic is alive",
+  "GSRomanticState.8": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, but Romantic is dead",
+  "GSRomanticState.24": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, and Romantic is alive",
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
   "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
