color tags for the other 2 langs

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1176,22 +1176,22 @@
   "RemainingText.Suffix": " restante",
   "RemainingText.EjectionSuffix.NKSingle": "restante.",
   "RemainingText.EjectionSuffix.NKPlural": "restantes.",
-  "GSInfo.ImpCount": "Impostores: {0}",
-  "GSInfo.MadmateCount": "Madmates: {0}",
-  "GSInfo.ConvertedCount": "Converted Players (excluding Madmates): {0}",
-  "GSInfo.NNKCount": "Neutros Não-Assassinos: {0}",
-  "GSInfo.NKCount": "Neutros Assassinos: {0}",
-  "GSInfo.CrewCount": "Tripulantes: {0}",
+  "GSInfo.ImpCount": "<#ff1919>Impostores:</color> {0}",
+  "GSInfo.MadmateCount": "<#ff1919>Madmates:</color> {0}",
+  "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> (excluding <#ff1919>Madmates</color>): {0}",
+  "GSInfo.NNKCount": "<#ffab1b>Neutros</color> <#ffff00>Não-Assassinos:</color> {0}",
+  "GSInfo.NKCount": "<#ffab1b>Neutros</color> <#ff1919>Assassinos:</color> {0}",
+  "GSInfo.CrewCount": "<#8cffff>Tripulantes:</color> {0}",
   "GSInfo.RomanticState": "{0}",
-  "GSInfo.LoversState": "Número de Amantes Vivos: {0}",
-  "GSInfo.Tasks": "Tarefas Concluídas: {0}",
-  "GSRomanticState.0": "O Romântico não existe",
-  "GSRomanticState.1": "O Romântico existe, mas ainda não escolheu um parceiro",
-  "GSRomanticState.2": "Romantic exists and has picked a partner",
-  "GSRomanticState.3": "Romantic exists, is alive, but hasn't picked a partner",
-  "GSRomanticState.6": "Romantic exists, has picked a partner who is dead, but Romantic is alive",
-  "GSRomanticState.8": "Romantic exists, has picked a partner who is alive, but Romantic is dead",
-  "GSRomanticState.24": "Romantic exists, has picked a partner who is alive, and Romantic is alive",
+  "GSInfo.LoversState": "Número de <#ff9ace>Amantes</color> Vivos: {0}",
+  "GSInfo.Tasks": "<#00ffa5>Tarefas Concluídas:</color> {0}",
+  "GSRomanticState.0": "O <#ff1493>Romântico</color> não existe",
+  "GSRomanticState.1": "O <#ff1493>Romântico</color> existe, mas ainda não escolheu um parceiro",
+  "GSRomanticState.2": "<#ff1493>Romantic</color> exists and has picked a partner",
+  "GSRomanticState.3": "<#ff1493>Romantic</color> exists, is alive, but hasn't picked a partner",
+  "GSRomanticState.6": "<#ff1493>Romantic</color> exists, has picked a partner who is dead, but Romantic is alive",
+  "GSRomanticState.8": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, but Romantic is dead",
+  "GSRomanticState.24": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, and Romantic is alive",
   "Cooldown": "Recarga",
   "CurseCooldown": "Recarga para Amaldiçoar",
   "FreezeAfterCurseKill": "Congelar após matar com um jogador amaldiçoado",
