--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -1176,22 +1176,22 @@
   "RemainingText.Suffix": " осталось",
   "RemainingText.EjectionSuffix.NKSingle": "остался.",
   "RemainingText.EjectionSuffix.NKPlural": "осталось.",
-  "GSInfo.ImpCount": "Предателей: {0}",
-  "GSInfo.MadmateCount": "Медмейтов: {0}",
-  "GSInfo.ConvertedCount": "Рекрутированных игроков (кроме Медмейтов): {0}",
-  "GSInfo.NNKCount": "Пассивных Нейтралов: {0}",
-  "GSInfo.NKCount": "Нейтральных Убийц: {0}",
-  "GSInfo.CrewCount": "Членов Экипажа: {0}",
+  "GSInfo.ImpCount": "<#ff1919>Предателей:</color> {0}",
+  "GSInfo.MadmateCount": "<#ff1919>Медмейтов:</color> {0}",
+  "GSInfo.ConvertedCount": "<#ffab1b>Рекрутированных игроков</color> (кроме <#ff1919>Медмейтов</color>): {0}",
+  "GSInfo.NNKCount": "<#ffff00>Пассивных</color> <#ffab1b>Нейтралов:</color> {0}",
+  "GSInfo.NKCount": "<#ffab1b>Нейтральных</color> <#ff1919>Убийц:</color> {0}",
+  "GSInfo.CrewCount": "<#8cffff>Членов Экипажа:</color> {0}",
   "GSInfo.RomanticState": "{0}",
-  "GSInfo.LoversState": "Живых Lover'ов: {0}",
-  "GSInfo.Tasks": "Всего заданий выполнено: {0}",
-  "GSRomanticState.0": "Romantic не появился в игре",
-  "GSRomanticState.1": "Romantic существует, но не выбрал партнёра",
-  "GSRomanticState.2": "Romantic жив и выбрал партнёра",
-  "GSRomanticState.3": "Romantic жив, но не выбрал партнёра",
-  "GSRomanticState.6": "Romantic жив, его партнёр мёртв",
-  "GSRomanticState.8": "Romantic мёртв, его партнёр жив",
-  "GSRomanticState.24": "Romantic и его партнёр живы",
+  "GSInfo.LoversState": "Живых <#ff9ace>Lover'ов:</color> {0}",
+  "GSInfo.Tasks": "<#00ffa5>Всего заданий выполнено:</color> {0}",
+  "GSRomanticState.0": "<#ff1493>Romantic</color> не появился в игре",
+  "GSRomanticState.1": "<#ff1493>Romantic</color> существует, но не выбрал партнёра",
+  "GSRomanticState.2": "<#ff1493>Romantic</color> жив и выбрал партнёра",
+  "GSRomanticState.3": "<#ff1493>Romantic</color> жив, но не выбрал партнёра",
+  "GSRomanticState.6": "<#ff1493>Romantic</color> жив, его партнёр мёртв",
+  "GSRomanticState.8": "<#ff1493>Romantic</color> мёртв, его партнёр жив",
+  "GSRomanticState.24": "<#ff1493>Romantic</color> и его партнёр живы",
   "Cooldown": "Откат",
   "CurseCooldown": "Откат проклятия",
   "FreezeAfterCurseKill": "Замораживать после убийства проклятым игроком",
