--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1179,8 +1179,8 @@
   "GSInfo.ImpCount": "<#ff1919>Impostors:</color> {0}",
   "GSInfo.MadmateCount": "<#ff1919>Madmates:</color> {0}",
   "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> (excluding <#ff1919>Madmates</color>): {0}",
-  "GSInfo.NNKCount": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals:</color> {0}",
-  "GSInfo.NKCount": "<#ffab1b>Neutral</color> <#ff1919>Killers:</color> {0}",
+  "GSInfo.NNKCount": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color>: {0}",
+  "GSInfo.NKCount": "<#ffab1b>Neutral</color> <#ff1919>Killers</color>: {0}",
   "GSInfo.CrewCount": "<#8cffff>Crewmates:</color> {0}",
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Number of <#ff9ace>Lovers</color> Alive: {0}",
