--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1179,8 +1179,8 @@
   "GSInfo.ImpCount": "<#ff1919>Impostores:</color> {0}",
   "GSInfo.MadmateCount": "<#ff1919>Madmates:</color> {0}",
   "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> (excluding <#ff1919>Madmates</color>): {0}",
-  "GSInfo.NNKCount": "<#ffab1b>Neutros</color> <#ffff00>Não-Assassinos:</color> {0}",
-  "GSInfo.NKCount": "<#ffab1b>Neutros</color> <#ff1919>Assassinos:</color> {0}",
+  "GSInfo.NNKCount": "<#ffab1b>Neutros</color> <#ffff00>Não-Assassinos</color>: {0}",
+  "GSInfo.NKCount": "<#ffab1b>Neutros</color> <#ff1919>Assassinos</color>: {0}",
   "GSInfo.CrewCount": "<#8cffff>Tripulantes:</color> {0}",
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Número de <#ff9ace>Amantes</color> Vivos: {0}",
