--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -1179,8 +1179,8 @@
   "GSInfo.ImpCount": "<#ff1919>Предателей:</color> {0}",
   "GSInfo.MadmateCount": "<#ff1919>Медмейтов:</color> {0}",
   "GSInfo.ConvertedCount": "<#ffab1b>Рекрутированных игроков</color> (кроме <#ff1919>Медмейтов</color>): {0}",
-  "GSInfo.NNKCount": "<#ffff00>Пассивных</color> <#ffab1b>Нейтралов:</color> {0}",
-  "GSInfo.NKCount": "<#ffab1b>Нейтральных</color> <#ff1919>Убийц:</color> {0}",
+  "GSInfo.NNKCount": "<#ffff00>Пассивных</color> <#ffab1b>Нейтралов</color>: {0}",
+  "GSInfo.NKCount": "<#ffab1b>Нейтральных</color> <#ff1919>Убийц</color>: {0}",
   "GSInfo.CrewCount": "<#8cffff>Членов Экипажа:</color> {0}",
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Живых <#ff9ace>Lover'ов:</color> {0}",
