--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -735,7 +735,7 @@
   "OracleInfoLong": "(Crewmates):\\nAs the Oracle, you may vote a player during a meeting.\\nYou'll see if they are a crewmate, neutral, or Impostor.\\n<color=#ff0000><b>But be careful!\\nThis has a chance of giving you an incorrect result!</b></color>\\n(The chance is set by the host)",
   "SpiritualistInfoLong": "(Crewmates):\\nAs the Spiritualist, you will get an arrow pointing to the ghost of the body that was reported in the last meeting.\\n\\nIf the player was good, it may lead you to an Impostor or neutral killer.\\nIf the player was bad, it may just lead you to a fellow crewmate.",
   "ChameleonInfoLong": "(Crewmates):\\nAs the Chameleon, you can vent to disguise (invisible).\\nWhile disguising, nobody can interact with you.\\nVenting while disguised will reveal yourself.",
-  "ParityCopInfoLong": "(Crewmates):\\nTo check if two players are in the same team, use the command /cp [player id 1] [player id 2]. Neutrals and converted players are counted as part of the same team. The Trickster is counted as crew and Rascal is counted as Impostor. You will receive an affirmation message if they are in the same team, or a denial message if they are not.",
+  "ParityCopInfoLong": "(Crewmates):\\nTo check if two players are in the same team, use the command /cp [player id 1] [player id 2]. Neutral killers are counted as part of the same team. Non-Killing Neutrals are counted as separate teams. The Trickster is counted as crew and Madmates are counted as Impostor. The Lawyer/Follower and its target count as the same team. You will receive an affirmation message if they are in the same team, or a denial message if they are not.",
   "TimeMasterInfoLong": "(Crewmates):\\nAs the Time Master, use the vents/pet your pet to mark everyone's position.\\nWhen using the ability again, every alive player will be teleported back to the marked positions.\\n\\nDuring the ability duration, the Time Master gains a time shield, which protects them from death.",
   "CrusaderInfoLong": "(Crewmates):\\nAs the Crusader, use your kill button to crusade a player.\\nIf that player gets attacked, you'll kill the attacker.",
   "ReverieInfoLong": "(Crewmates):\\nAs the Reverie, you can kill but your cooldown starts very high.\\n\\nIt lowers with each kill you make.\\n\\nYou win with other crewmates.",
@@ -1517,8 +1517,6 @@
   "SidekickCountMode.None": "Nothing",
   "SidekickCountMode.Jackal": "<color=#00b4eb>Jackal</color>",
   "SidekickCountMode.Original": "Original Team",
-  "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
-  "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
   "ContagiousCountMode": "<color=#2E8B57>Contagious</color> players count as",
   "ContagiousCountMode.None": "Nothing",
   "ContagiousCountMode.Virus": "<color=#2E8B57>Virus</color>",
