--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1286,6 +1286,8 @@
   "DeadCrewCantSabotage": "<color=#8cffff>Crewmates</color> can't sabotage after they've died",
   "DeadNeutralCantSabotage": "<color=#ffab1b>Neutrals</color> can't sabotage after they've died",
   "VampireKillDelay": "Bite Kill Delay",
+  "VampireKillCooldown": "Bite Cooldown",
+  "CanKillNormally": "Can Kill Normally (using double click)",
   "MareAddSpeedInLightsOut": "Additional Speed During Lights Out",
   "MareKillCooldownInLightsOut": "Kill Cooldown During Lights Out",
   "KillCooldownNormally": "Kill Cooldown Without Sabotage",
